[Fix] alignment issue in other pages - Use css variable to maintain the alignment

--- a/packages/@okta/vuepress-theme-prose/assets/css/components/_content.scss
+++ b/packages/@okta/vuepress-theme-prose/assets/css/components/_content.scss
@@ -56,7 +56,7 @@
 
 .content--container .sidebar-area {
   position: sticky;
-  top: 142px;
+  top: calc(142px + var(--header-banner-height));
 
   width: 18.5vw;
   min-width: 350px;
