--- a/packages/@okta/vuepress-theme-prose/assets/css/components/_onThisPage.scss
+++ b/packages/@okta/vuepress-theme-prose/assets/css/components/_onThisPage.scss
@@ -11,7 +11,7 @@
 
 @include media(">=tablet") {
   .on-this-page-navigation {
-    top: 170px;
+    top: calc(170px + var(--header-banner-height));
 
     padding-bottom: 40px;
     min-height: 450px;
