--- a/packages/@okta/vuepress-theme-prose/assets/css/layouts/_layout.scss
+++ b/packages/@okta/vuepress-theme-prose/assets/css/layouts/_layout.scss
@@ -5,6 +5,10 @@ body,
   scroll-behavior: smooth;
 }
 
+:root {
+  --header-banner-height: 0px;
+}
+
 body {
   display: none;
 
@@ -78,7 +82,7 @@ body.loaded {
 
 .page-body {
   flex: 1 0 auto;
-  padding-top: 141px;
+  padding-top: calc(141px + var(--header-banner-height));
 
   background-color: #ffffff;
 
@@ -87,13 +91,13 @@ body.loaded {
 
 @include media("<desktop-xl") {
   .page-body {
-    padding-top: 125px;
+    padding-top: calc(125px + var(--header-banner-height));
   }
 }
 
 @include media("<tablet") {
   .page-body {
-    padding-top: 115px;
+    padding-top: calc(115px + var(--header-banner-height));
   }
 }
 
